[gd_scene load_steps=37 format=3 uid="uid://bwwfvrpsc5qnv"]

[ext_resource type="Texture2D" uid="uid://dvgnp0nsjy2lu" path="res://Assets/Intro/blackbg.png" id="1_csbw7"]
[ext_resource type="Script" path="res://Niveles/intro_druid.gd" id="1_uya5m"]
[ext_resource type="Texture2D" uid="uid://c1oq43as345fm" path="res://Assets/Intro/Picsart_23-12-29_20-38-46-872.jpg" id="2_7odi3"]
[ext_resource type="Texture2D" uid="uid://5dixnhm6c77o" path="res://player/player/Idle.png" id="3_mxn3o"]
[ext_resource type="Texture2D" uid="uid://dbqwrnqaogx6m" path="res://player/player/Walk.png" id="4_d71e1"]
[ext_resource type="Texture2D" uid="uid://dmu237dmx0r74" path="res://Assets/NPC/Druid.png" id="5_f5kl1"]
[ext_resource type="PackedScene" uid="uid://c1sx32kth144p" path="res://Dialogos/control_dialog.tscn" id="6_dnose"]
[ext_resource type="PackedScene" uid="uid://c3ml3f342bwn8" path="res://Niveles/canvas_layer_transition.tscn" id="7_cfeif"]
[ext_resource type="AudioStream" uid="uid://qecylq4ppdy7" path="res://Assets/Audio/Music/Of Far Different Nature - Eastern Treasures (CC-BY).ogg" id="9_vfa2u"]

[sub_resource type="AtlasTexture" id="AtlasTexture_0teut"]
atlas = ExtResource("3_mxn3o")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_f3l1h"]
atlas = ExtResource("3_mxn3o")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ntn5b"]
atlas = ExtResource("3_mxn3o")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_lf15f"]
atlas = ExtResource("3_mxn3o")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_4slkq"]
atlas = ExtResource("3_mxn3o")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_dev4a"]
atlas = ExtResource("3_mxn3o")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_32h7k"]
atlas = ExtResource("4_d71e1")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_n0rk4"]
atlas = ExtResource("4_d71e1")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_3lbpf"]
atlas = ExtResource("4_d71e1")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_2unmi"]
atlas = ExtResource("4_d71e1")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_jefl0"]
atlas = ExtResource("4_d71e1")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_8pjw1"]
atlas = ExtResource("4_d71e1")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_dsxwv"]
atlas = ExtResource("4_d71e1")
region = Rect2(768, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ubo6w"]
atlas = ExtResource("4_d71e1")
region = Rect2(896, 0, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_a8v1p"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0teut")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f3l1h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ntn5b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lf15f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4slkq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dev4a")
}],
"loop": true,
"name": &"idle",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_32h7k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n0rk4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3lbpf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2unmi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jefl0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8pjw1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dsxwv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ubo6w")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lmmqi"]
size = Vector2(31.1112, 75.5555)

[sub_resource type="AtlasTexture" id="AtlasTexture_fvgrn"]
atlas = ExtResource("5_f5kl1")
region = Rect2(0, 192, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_uhw0n"]
atlas = ExtResource("5_f5kl1")
region = Rect2(48, 192, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_i1886"]
atlas = ExtResource("5_f5kl1")
region = Rect2(96, 192, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_l73a2"]
atlas = ExtResource("5_f5kl1")
region = Rect2(144, 192, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_1m35y"]
atlas = ExtResource("5_f5kl1")
region = Rect2(0, 576, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_yydwx"]
atlas = ExtResource("5_f5kl1")
region = Rect2(48, 576, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_2jnfr"]
atlas = ExtResource("5_f5kl1")
region = Rect2(96, 576, 48, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_vvh55"]
atlas = ExtResource("5_f5kl1")
region = Rect2(144, 576, 48, 96)

[sub_resource type="SpriteFrames" id="SpriteFrames_tu7n6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fvgrn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uhw0n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i1886")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l73a2")
}],
"loop": true,
"name": &"idle",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1m35y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yydwx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2jnfr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vvh55")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ke1yu"]
size = Vector2(31.1112, 75.5555)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3nsor"]
size = Vector2(203, 20)

[node name="intro_druid" type="Node"]
script = ExtResource("1_uya5m")

[node name="ParallaxBackground2" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground2"]
position = Vector2(212, 114)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground2/ParallaxLayer"]
scale = Vector2(0.3, 0.3)
texture = ExtResource("1_csbw7")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
scale = Vector2(1.5, 1.5)
transform = Transform2D(1.5, 0, 0, 1.5, 0, 0)

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2(-71.3333, -42.6667)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2(213.547, 121.5)
scale = Vector2(0.0941762, 0.095843)
texture = ExtResource("2_7odi3")

[node name="player" type="CharacterBody2D" parent="."]
position = Vector2(-38, -65)
scale = Vector2(1.5, 1.5)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="player"]
position = Vector2(183, 137)
scale = Vector2(0.3, 0.3)
sprite_frames = SubResource("SpriteFrames_a8v1p")
animation = &"idle"
autoplay = "idle"
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="player"]
position = Vector2(184, 145.333)
scale = Vector2(0.3, 0.3)
shape = SubResource("RectangleShape2D_lmmqi")

[node name="druid" type="CharacterBody2D" parent="."]
position = Vector2(-107, -96)
scale = Vector2(1.7, 1.7)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="druid"]
position = Vector2(182.667, 145.333)
scale = Vector2(0.3, 0.3)
sprite_frames = SubResource("SpriteFrames_tu7n6")
animation = &"idle"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="druid"]
position = Vector2(182.667, 145.333)
scale = Vector2(0.3, 0.3)
shape = SubResource("RectangleShape2D_ke1yu")

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2(153, 167)

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(58, 13)
shape = SubResource("RectangleShape2D_3nsor")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 74.0
offset_top = 60.0
offset_right = 114.0
offset_bottom = 182.0

[node name="ColorRect" type="ColorRect" parent="Control"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 119.0
color = Color(0, 0.027451, 0.0980392, 1)

[node name="ControlDialog" parent="." instance=ExtResource("6_dnose")]
offset_left = -182.13
offset_top = -67.0
offset_right = 189.87
offset_bottom = -4.0

[node name="CanvasLayerTransition" parent="." instance=ExtResource("7_cfeif")]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_vfa2u")
autoplay = true
bus = &"Music"

[connection signal="clear" from="ControlDialog" to="." method="_on_control_dialog_clear"]
